objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>B2B Mortgage Sales</fullName>
        <description>Covers PPS, Resolve and Scenario</description>
        <isActive>true</isActive>
        <values>
            <fullName>Application Submitted</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Conditionally Approved</fullName>
        </values>
        <values>
            <fullName>Contact - 1st</fullName>
        </values>
        <values>
            <fullName>Contact - 2nd</fullName>
        </values>
        <values>
            <fullName>Contact - 3rd</fullName>
        </values>
        <values>
            <fullName>Formally Approved</fullName>
        </values>
        <values>
            <fullName>Loan Docs Incomplete</fullName>
        </values>
        <values>
            <fullName>Loan Docs Issued</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Pended</fullName>
        </values>
        <values>
            <fullName>Settled</fullName>
        </values>
        <values>
            <fullName>Settlement booked</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Direct Sales</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Application</fullName>
        </values>
        <values>
            <fullName>Application Submitted</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Conditionally Approved</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Formally Approved</fullName>
        </values>
        <values>
            <fullName>Loan Docs Issued</fullName>
        </values>
        <values>
            <fullName>Pack Out</fullName>
        </values>
        <values>
            <fullName>Pack Returned</fullName>
        </values>
        <values>
            <fullName>Settled</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PAF Sales process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Identifying Decision Maker</fullName>
        </values>
        <values>
            <fullName>Initial Discussions</fullName>
        </values>
        <values>
            <fullName>Negotiation Required</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Are_you_aware_of_any_credit_adversitie__c</fullName>
        <inlineHelpText>Are you aware of any credit adversities listed on your credit file?</inlineHelpText>
        <label>Credit adversities listed on credit file</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_ARM_Lead_ID__c</fullName>
        <label>ARM Lead ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_ARM_Loan_Type__c</fullName>
        <label>ARM-Loan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Finance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Actual_loan_amount__c</fullName>
        <label>Actual loan amount submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Any_judgements_ever_been_banakrupted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any adverse credit history</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Application_Date__c</fullName>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Application_ID__c</fullName>
        <label>Application ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Are_you_currently_Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are you currently employed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Assignee__c</fullName>
        <label>Assignee</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Available_Income__c</fullName>
        <label>Available income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Borrow_Mortgage__c</fullName>
        <label>Borrow mortgage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Borrow_PAF__c</fullName>
        <label>Borrow PAF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Borrow_PL__c</fullName>
        <label>Borrow PL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Borrower_Count__c</fullName>
        <label>Borrower count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Label</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Broker_relationship__c</fullName>
        <label>Broker relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect/via Aggregator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Campaign__c</fullName>
        <label>Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Car_Refinance_Options__c</fullName>
        <label>Car refinance options</label>
        <picklist>
            <picklistValues>
                <fullName>0-6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months +</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Channel__c</fullName>
        <formula>TEXT(Account.CRM_Channel__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_City_Suburb__c</fullName>
        <label>City Suburb</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Claimed_Living_Expenses__c</fullName>
        <label>Claimed living expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Comments__c</fullName>
        <label>Comments (From web form)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Conforming_Non_Conforming__c</fullName>
        <label>Conforming/non conforming</label>
        <picklist>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Credit_Card_Limit__c</fullName>
        <label>Credit card limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Credit_Card_Multiplier__c</fullName>
        <label>Credit card multiplier (c)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Credit_History__c</fullName>
        <label>Credit history</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defaults within 12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defaults over 12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defaults over 3 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defaults under $1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discharged Bankrupt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquidation / External administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATO Debt</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Credit_Impairment_Age_Borrower2__c</fullName>
        <label>Credit impairment age</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Credit_Impairment_Age_Borrower_1__c</fullName>
        <label>Credit impairment age(years)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Credit_Impairment_Borrower1__c</fullName>
        <label>Credit impairment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Credit_Impairment_Borrower2__c</fullName>
        <label>Credit impairment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Credit_Impairment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit impairment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Dealer_Type__c</fullName>
        <label>Dealer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Dependants__c</fullName>
        <label>Dependants</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Deposit_Amount__c</fullName>
        <label>Deposit amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Did_you_have_a_property_in_mind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did you have a property in mind?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Do_you_have_dealerships__c</fullName>
        <label>Do you have dealerships</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Do_you_have_your_last_2_years_return__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you have your last 2 years return?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Employment_Type_Borrower1__c</fullName>
        <label>Employment type</label>
        <picklist>
            <picklistValues>
                <fullName>PAYG - Full Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed - Full Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed - Low Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centerlink -Full Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Employment_Type_Borrower2__c</fullName>
        <label>Employment type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Est_Rental_Income__c</fullName>
        <label>Est. rental income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Estimated_Value__c</fullName>
        <label>Estimated Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Final_loan_amount__c</fullName>
        <label>Final loan amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_First_Activity_Created_On__c</fullName>
        <label>First Activity Created On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Flag__c</fullName>
        <formula>IF(
	NOT(ISNULL(CRM_First_Activity_Created_On__c))
	,
		IMAGE(&quot;/resource/CRM_Flags/tick.jpeg&quot;, &quot;Tick&quot;, 20, 20)	
	,
	If(
		AND(ISNULL(CRM_First_Activity_Created_On__c), ROUND((NOW() - CreatedDate) * 24 * 60, 0) &gt; 60, 
		ROUND((NOW() - CreatedDate) * 24 * 60, 0) &lt;= 4320)
		, 
		IMAGE(&quot;/resource/CRM_Flags/amber.png&quot;, &quot;Amber&quot;, 20, 20)
		, 
		IF(
			AND(ISNULL(CRM_First_Activity_Created_On__c), ROUND((NOW() - CreatedDate) * 24 * 60, 0) &gt; 4320), 
			IMAGE(&quot;/resource/CRM_Flags/red.png&quot;, &quot;Red&quot;, 20, 20)
			, 
			
			NULL 
		)
	)
)</formula>
        <label>Contact Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Floor_Number__c</fullName>
        <label>Floor Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Gross_Income_Borrower1__c</fullName>
        <label>Gross income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Gross_Income_Borrower2__c</fullName>
        <label>Gross income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Gross_Income_Frequency_Borrower1__c</fullName>
        <label>Gross income frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortnightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Gross_Income_Frequency_Borrower2__c</fullName>
        <label>Gross income frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Gross_rent_income__c</fullName>
        <label>Gross rent income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Home_Refinance_Options__c</fullName>
        <label>Home refinance options</label>
        <picklist>
            <picklistValues>
                <fullName>0-6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <picklist>
            <picklistValues>
                <fullName>Google (other search engine)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News/Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising (print/TV/radio/billboard etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend/Family/Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sporting Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email/Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other/Don’t Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accountant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_How_long_have_you_been_employed__c</fullName>
        <label>How long have you been employed?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_How_much_youlooking_to_contribute__c</fullName>
        <label>How much you are looking to contribute?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Interested_product__c</fullName>
        <label>Interested product</label>
        <picklist>
            <picklistValues>
                <fullName>Car finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorbike finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caravan finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Introducer__c</fullName>
        <label>Introducer</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Introduction_ID__c</fullName>
        <label>Introduction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Keywords__c</fullName>
        <label>Keywords</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Lead_Channel_Level_1__c</fullName>
        <label>Lead channel level 1</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Lead_Channel_Level_3__c</fullName>
        <label>Lead channel level-3</label>
        <picklist>
            <controllingField>CRM_Lead_Channel_Level__c</controllingField>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programmatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organic search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Lead_Channel_Level_4__c</fullName>
        <label>Lead channel level-4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Lead_Channel_Level__c</fullName>
        <label>Lead channel level 2</label>
        <picklist>
            <controllingField>CRM_Lead_Channel_Level_1__c</controllingField>
            <picklistValues>
                <fullName>General Phone number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign specific phone number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSC transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Lead_Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Email Enquiry Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Enquiry PAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSC Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Form - Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Form Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Form Apps - A/R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WSW - ARM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WSW - Direct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Lead_ID__c</fullName>
        <label>Lead ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Lead_Score_Indicator_del__c</fullName>
        <formula>IF( VALUE( CRM_Lead_Score_del__c ) &gt;= 85, 
IMAGE(&apos;/resource/1471511556000/GreenIndicator&apos;,&apos;green&apos;,30,30), 
IF( AND(VALUE( CRM_Lead_Score_del__c ) &lt; 85 ,VALUE( CRM_Lead_Score_del__c ) &gt;= 50), 
IMAGE(&apos;/resource/1471511635000/YellowIndecator&apos;,&apos;yellow&apos;,30,30), 
IMAGE(&apos;/resource/1471511583000/RedIndicator&apos;,&apos;red&apos;,30,30) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead score indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Lead_Score_del__c</fullName>
        <formula>TEXT( 
IF(CRM_Are_you_currently_Employed__c=True,10,5) + 

IF(CRM_Do_you_have_your_last_2_years_return__c = True,10, 5) + 

IF(CRM_Did_you_have_a_property_in_mind__c = True , 10, 5) + 

IF(CRM_What_is_your_current_annual_Income__c &gt; 0, 20, 5) + 

IF( !ISBLANK(CRM_Where_property_is_located_PostCode__c) , 10,5) + 

IF(CRM_How_much_youlooking_to_contribute__c != &quot;0&quot; 
&amp;&amp; !ISBLANK(CRM_How_much_youlooking_to_contribute__c) , 10,5)+ 

IF(CRM_Any_judgements_ever_been_banakrupted__c = False, 20, 0) + 


IF( TEXT(CRM_Employment_Type_Borrower1__c) != null || 
( !ISBLANK(CRM_Years_Self_Employed_Borrower1__c) &amp;&amp; 
CRM_Years_Self_Employed_Borrower1__c!= &quot;0&quot;) , 10, 5) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Lead_Source__c</fullName>
        <label>Lead source</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Advert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previously worked with Pepper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proactively sourced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead from which the opportunity was created</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Lending_Support__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lending Support</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Live_Dead__c</fullName>
        <label>Live/dead</label>
        <picklist>
            <picklistValues>
                <fullName>Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dead</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Living_Expenses__c</fullName>
        <label>Living expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Loan_Purpose__c</fullName>
        <label>Loan purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner Occupied property</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Loan_Type__c</fullName>
        <label>Loan type</label>
        <picklist>
            <picklistValues>
                <fullName>Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Loan</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Loan_Type_multi__c</fullName>
        <label>ARM-Loan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Finance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CRM_Location__c</fullName>
        <formula>CRM_Floor_Number__c &amp; &quot; &quot; &amp; CRM_Property_Name__c &amp; &quot; &quot; &amp; CRM_Unit_Number__c &amp; &quot; &quot; &amp; CRM_Street_Number__c &amp; &quot; &quot; &amp; CRM_Street_Name__c &amp; &quot; &quot; &amp; CRM_Street_Type__c &amp; &quot; &quot; &amp; CRM_City_Suburb__c &amp; &quot; &quot; &amp; TEXT(CRM_State__c) &amp; &quot; &quot; &amp; CRM_Postcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Log_a_call_number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OB Call Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>